guard against loading etex package in current latex

--- a/doc/latex/TKZdoc-linknodes-us.tex
+++ b/doc/latex/TKZdoc-linknodes-us.tex
@@ -54,10 +54,10 @@
 \usepackage[parfill]{parskip}    
 
 \gdef\nameofpack{tkz-linknodes}
-\gdef\versionofpack{1.1 c}  
-\gdef\dateofpack{2011/06/02}   
-\gdef\nameofdoc{doc-linknodes v1.1 c}
-\gdef\dateofdoc{2011/06/02} 
+\gdef\versionofpack{1.1 d}  
+\gdef\dateofpack{2018/09/19}   
+\gdef\nameofdoc{doc-linknodes v1.1 d}
+\gdef\dateofdoc{2018/09/19} 
 \gdef\authorofpack{Alain Matthes}
 \gdef\adressofauthor{}
 \gdef\namecollection{AlterMundus}    
