--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 Encoding  : utf8
 Author    : Alain Matthes
-Date      : 01/03/2009
+Date      : 19/09/2018
 Package   : tkz-linknodes.sty
-Version   : 1.0c
+Version   : 1.1d
 
 
                  The linknodes package
